--- a/LibraryManagement/Pages/ItemsToBorrow/Index.cshtml
+++ b/LibraryManagement/Pages/ItemsToBorrow/Index.cshtml
@@ -10,6 +10,18 @@
 <p>
     <a asp-page="Create">Create New LibraryItem</a>
 </p>
+<form asp-page="./Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            Find by Type:
+            <select asp-for="TypeItem" asp-items="Model.Genres">
+                <option value="">All</option>
+            </select>
+            <input type="submit" value="Filter" />
+        </p>
+    </div>
+</form>
+
 <table class="table">
     <thead>
         <tr>
