Fixed check in and check out buttons

--- a/LibraryManagement/Pages/ItemsToBorrow/Edit.cshtml
+++ b/LibraryManagement/Pages/ItemsToBorrow/Edit.cshtml
@@ -68,8 +68,8 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
-                <input type="submit" value="Check Out" class="btn btn-primary" name="checkOutButton" />
-                <input type="submit" value="Check In" class="btn btn-primary" name="checkInButton" />
+                <input type="submit" value="Check Out" class="btn btn-primary" asp-page-handler="CheckOut" />
+                <input type="submit" value="Check In" class="btn btn-primary" asp-page-handler="CheckIn"/>
 
             </div>
         </form>
